<resources>
    <string name="app_name">LadaStylePlayer</string>
    <string name="status_no_usb">USB folder is not selected</string>
    <string name="status_usb_ready">USB ready</string>
    <string name="status_usb_connected">USB Connected</string>
    <string name="status_no_sources">No sources configured</string>
    <string name="cover_desc">Track cover</string>
    <string name="no_track">No track playing</string>
    <string name="mute">Mute</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="play_pause">Play/Pause</string>
    <string name="browse">Browse</string>
    <string name="play_all">Play All</string>
    <string name="shuffle_label">Shuffle</string>
    <string name="repeat_label">Repeat</string>
    <string name="list_label">Files view</string>
    <string name="usb_disconnected">USB disconnected, choose folder again</string>
    <string name="choose_folder">Choose USB folder</string>
    <string name="folder_picker_hint">Pick a music folder</string>
    <string name="pick_folder_for_source">Pick folder for source: %1$s</string>
    <string name="add_music_source">Add a music source</string>
    <string name="select_source_hint">Select a source from the right panel</string>
    <string name="source_unavailable_suffix">Unavailable</string>
    <string name="sources">Sources</string>
    <string name="path_sources">Sources</string>
    <string name="path_source">%1$s • Music</string>
    <string name="path_source_branch">%1$s • %2$s</string>
    <string name="top_source_roots">Select source roots</string>
    <string name="top_source_branches">Browsing %1$s</string>
    <string name="showing_music_in">Showing music in %1$s</string>
    <string name="no_music_branches">No music-relevant folders in this source</string>
    <string name="file_picker_hint">Pick a song</string>
    <string name="file_pick_cancelled">Audio selection canceled</string>
    <string name="folder_pick_cancelled">Folder selection canceled</string>
    <string name="uri_permission_failed">Cannot access selected item</string>
    <string name="source_root_denied">This folder cannot be used as a root source. Pick another folder.</string>
    <string name="source_root_wrong_source">Selected folder does not belong to source %1$s.</string>
    <string name="source_not_configured_use_long_press">Source %1$s is not configured. Long-press the folder button to bind it.</string>
    <string name="file_context_unavailable">Playing selected file, but folder context is unavailable</string>
    <string name="playback_failed">Cannot play selected audio</string>
    <string name="no_supported_audio">No supported audio files found</string>
    <string name="folders">Folders</string>
    <string name="left_panel_title">Songs</string>
    <string name="right_panel_title">Folders</string>
    <string name="files">Files</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_album">Folder information unavailable</string>
    <string name="no_folders_found">No folders in this location</string>
    <string name="no_subfolders_found">No subfolders in this location</string>
    <string name="now_playing_footer">Now Playing</string>
    <string name="folder_files_footer">Songs From Active Folder</string>
    <string name="folder_explorer_footer">Active Folder Tree</string>
    <string name="top_source_placeholder">Showing files in folder</string>
    <string name="prev_symbol">⏮</string>
    <string name="next_symbol">⏭</string>
    <string name="play_symbol">▶</string>
    <string name="pause_symbol">⏸</string>
    <string name="browse_symbol">📁</string>
    <string name="mute_symbol">🔇</string>
    <string name="unmute_symbol">🔊</string>
    <string name="seek_symbol">+10</string>
    <string name="shuffle_symbol">⤮</string>
    <string name="repeat_symbol">↻</string>
    <string name="repeat_off_symbol">↻</string>
    <string name="repeat_all_symbol">↺</string>
    <string name="repeat_one_symbol">↺1</string>
    <string name="list_symbol">☰</string>
    <string name="info_symbol">ℹ</string>
    <string name="track_info_title">Track Details</string>
    <string name="track_info_body">Title: %1$s\nArtist: %2$s\nAlbum: %3$s\nFile: %4$s\nDuration: %5$s</string>
    <string name="unknown_file">Unknown file</string>
    <string name="seek_forward_hint">Jumped forward 10s</string>
    <string name="empty_left_add_folder">Add/open a folder</string>
    <string name="empty_right_folder_tracks_hint">Songs from selected folder will appear here</string>
    <string name="pick_root_folder_hint">Choose root folder first (long press the folder button)</string>
    <string name="select_folder_to_show_songs">Songs will appear after you select a folder on the right</string>
    <string name="select_source_to_show_songs">Songs will appear after you select a source on the right</string>
    <string name="songs_panel_title">Songs</string>
    <string name="folders_panel_title">Folders</string>
    <string name="startup_source_music">Музыка</string>
    <string name="startup_source_usb">USB %1$d</string>
</resources>
